--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,157 +17,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['range'] in *.ipynb files\n",
+      "Looking for: ['.apply', 'regex'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_Python_Base.ipynb\n",
-      "               : range() сам по себе , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Logres_affair.ipynb\n",
-      "               : RangeIndex: 6366 ent, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_A_B_testing_HW.ipynb\n",
-      "               : range(n_samples):\\n\", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ2.ipynb\n",
-      "               : range(-3.0,3.0,delta, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_HW1_Основы.ipynb\n",
-      "               : range(3):\\n\",\"    su, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_linreg_confidence_interval.ipynb\n",
-      "               : range</td>\\n\",\"     , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW2.ipynb\n",
-      "               : range(1,10)]).reshap, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_Darwinbooks_recommend.ipynb\n",
-      "               : range',\\n\",\" 'genera, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_HW_funcs_group.ipynb\n",
-      "               : range (1950,2011) )\\, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ERRORS_DATES_.ipynb\n",
-      "               : range, которая возвр, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_LogRegression_SVC_HW.ipynb\n",
-      "               : RangeIndex: 48842 en, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/SCRAPING_PARSING.ipynb\n",
-      "               : range\\\" type=\\\"radio, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ3.ipynb\n",
-      "               : range(-3.0,3.0,delta, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidential_intervals_HW.ipynb\n",
-      "               : RangeIndex: 4074 ent, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Numpy_HW.ipynb\n",
-      "               : range(r,-1,-1)))\\n\",, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Data_Visualization_HW.ipynb\n",
-      "               : RangeIndex: 40739 en, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_8.ipynb\n",
-      "               : range(n):\\n\",\n",
-      "      , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_Datatypes_LOOPs.ipynb\n",
-      "               : range(N))\\n\",\"print(, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Gradient_descent.ipynb\n",
-      "               : range(n_epochs):\\n\",, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Metrics_Regularization_HW.ipynb\n",
-      "               : RangeIndex: 11538 en, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_simpsons_baseline.ipynb\n",
-      "               : range\\n\",\"from tqdm , \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_pivot_and_str.ipynb\n",
-      "               : RangeIndex: 18938 en, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Advanced_Optimization.ipynb\n",
-      "               : range(-2, 2, 0.1)\\n\", \n",
+      "               : .apply(lambda row: r, regex=True)\\n\",\n",
+      "    , \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_lecture_04.ipynb\n",
-      "               : range(3)]\\n\",\"df1 = , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_t_Tests.ipynb\n",
-      "               : range', ls=':', lw=2, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_basics.ipynb\n",
-      "               : range(\\\"1/1/2000\\\", , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_Scrapping_Parsing_HW.ipynb\n",
-      "               : range(1,npages+1):\\n, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DateTimeTimeZone.ipynb\n",
-      "               : range(10)]\"\n",
-      "   ]\n",
-      "  }, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/COVID-19_visualization.ipynb\n",
-      "               : RangeIndex: 161568 e, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_Tricks.ipynb\n",
-      "               : range(0, 10) | <rang, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ERRORS_DATES_HW.ipynb\n",
-      "               : range, которая возвр, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_FILES_Read_Write_and_pip_JSON.ipynb\n",
-      "               : range(5)]) # 5 раз п, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_7_ERRORS_DATETIME.ipynb\n",
-      "               : range(len(dates_list, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Binary_Classification_wo_sklearn_HW.ipynb\n",
-      "               : range(len(X)//batch_, \n",
+      "               : .apply(norm_by_data2, regexps |\\n\",\"| ``rs, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_functions_groupby.ipynb\n",
+      "               : .apply(watcher)\\n\",\n",
+      ", regex = r'.*' + str_, \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_ESSENTIALS.ipynb\n",
-      "               : RangeIndex(start=0, , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_vs_set_and_dict.ipynb\n",
-      "               : range(10000))\"\n",
-      "   ]\n",
-      ", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_LossFunc_LinRegrOptimization_HW.ipynb\n",
-      "               : range(max_iter):\\n\",, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_linear_polynomial_regression.ipynb\n",
-      "               : RangeIndex: 804 entr, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_Dynamic_Programming.ipynb\n",
-      "               : range(1, k):   # ite, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_Bases2.ipynb\n",
-      "               : range(1, 20):\\n\",\"  , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/python_open_files.ipynb\n",
-      "               : range(max(lengths)),, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_LAB.ipynb\n",
-      "               : range(1,4):   \\n\",\" , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW9.ipynb\n",
-      "               : range(len(n1)):\\n\",\n",
-      ", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_6.ipynb\n",
-      "               : range is appr. 30, p, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_chaining_PCA_logistic_regression.ipynb\n",
-      "               : range(1, pca.n_compo, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidence_Intervals.ipynb\n",
-      "               : RangeIndex: 4074 ent, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_linreg_regularization.ipynb\n",
-      "               : range')\\n\",\"\\n\",\"plt, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_cross_val_score.ipynb\n",
-      "               : range 0..16.\\n\",\n",
-      "   , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_CS_videogames_HW.ipynb\n",
-      "               : RangeIndex: 16719 en, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_log_regression_SVM.ipynb\n",
-      "               : RangeIndex: 11538 en, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_list_dict.ipynb\n",
-      "               : range(1, 20):\\n\",\"  , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Power_Min_sample_size_HW.ipynb\n",
-      "               : range(10, 500, 10))\\, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Case_Power_MinSampleSize_HW.ipynb\n",
-      "               : range(10, 500, 10))\\, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_bs_conf_int.ipynb\n",
-      "               : range(bstrap_iter):\\, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_Numpy_Matrix.ipynb\n",
-      "               : range\\n\",\n",
-      "    \"\\n\",\n",
-      ", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_MULTIindex.ipynb\n",
-      "               : range(10) ) , set((r, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
-      "               : RangeIndex(start=0, , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_7.ipynb\n",
-      "               : range(1):\\n\",\n",
-      "      , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ.ipynb\n",
-      "               : range(50),\\n\",\n",
-      "    \", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_DispAnalysis_ABtests.ipynb\n",
-      "               : range statistic.\"\n",
-      "  , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Masterclass.ipynb\n",
-      "               : range(len(vecs)):\\n\", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_Capstone.ipynb\n",
-      "               : range\\\")\\n\",\n",
-      "       , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_5.ipynb\n",
-      "               : range(-2, 3, 0.1)\\n\", \n"
+      "               : .apply(norm_by_data2, regexps |\\n\",\"| ``rs, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_PIVOT_and_PYMYSTEM.ipynb\n",
+      "               : .apply(lambda row: r, regex=True)\\n\",\n",
+      "    , \n"
      ]
     }
    ],
