--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,31 +17,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['.apply', 'regex'] in *.ipynb files\n",
+      "Looking for: ['apply', 'баш'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_pivot_and_str.ipynb\n",
-      "               : .apply(lambda row: r, regex=True)\\n\",\n",
-      "    , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_lecture_04.ipynb\n",
-      "               : .apply(norm_by_data2, regexps |\\n\",\"| ``rs, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_functions_groupby.ipynb\n",
-      "               : .apply(watcher)\\n\",\n",
-      ", regex = r'.*' + str_, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_ESSENTIALS.ipynb\n",
-      "               : .apply(norm_by_data2, regexps |\\n\",\"| ``rs, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_PIVOT_and_PYMYSTEM.ipynb\n",
-      "               : .apply(lambda row: r, regex=True)\\n\",\n",
-      "    , \n"
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_HW_funcs_group.ipynb\n",
+      "               : apply(rating_clsfd) , Башевой\\n\",\n",
+      "    \"###, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/SCRAPING_PARSING.ipynb\n",
+      "               : apply(this,e),0,0);e, Башкортостан. Об это, \n"
      ]
     }
    ],
