--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,23 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['apply', 'баш'] in *.ipynb files\n",
+      "Looking for: ['drop_na('] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
-      "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_HW_funcs_group.ipynb\n",
-      "               : apply(rating_clsfd) , Башевой\\n\",\n",
-      "    \"###, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/SCRAPING_PARSING.ipynb\n",
-      "               : apply(this,e),0,0);e, Башкортостан. Об это, \n"
+      "................................................................................\n"
      ]
     }
    ],
