--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,18 +17,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['drop_na('] in *.ipynb files\n",
+      "Looking for: ['px.', 'asc'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
-      "................................................................................\n"
+      "................................................................................\n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_A_B_testing_HW.ipynb\n",
+      "               : px.histogram(data_cr| AsC7kGiwGHrrbd2p556q| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_linreg_confidence_interval.ipynb\n",
+      "               : px.line(gross_by_gen| ascending=False).hea| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_LogRegression_SVC_HW.ipynb\n",
+      "               : px.histogram(df_raw,| ASCdcAItJdFsYW+GvUX/| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidential_intervals_HW.ipynb\n",
+      "               : px.histogram(df['%']| Asc1sCyr59+8L2XS6Xcn| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Data_Visualization_HW.ipynb\n",
+      "               : px.line(df_RU, x='tr| ascending = False)\"]| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Metrics_Regularization_HW.ipynb\n",
+      "               : px.box(df[num_featur| aSCQSPPzwwzh79izWrFm| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/COVID-19_visualization.ipynb\n",
+      "               : px.choropleth(df, lo| ascar\",\n",
+      "            | \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_linear_polynomial_regression.ipynb\n",
+      "               : px.scatter(X_viz, x=| ascOAIBVCvMGql/PZBXm| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidence_Intervals.ipynb\n",
+      "               : px.line(df_pop, x='P| asCTMzM/j7+/PL7ezsdG| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_CS_videogames_HW.ipynb\n",
+      "               : px.box(df, x='Genre'| ascending= False).st| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Titanic.ipynb\n",
+      "               : px.histogram(df_viz,| ascending= False).st| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_7.ipynb\n",
+      "               : px.bar(x= df.columns| ascending'},)\\n\",\n",
+      "  | \n"
      ]
     }
    ],
@@ -77,7 +103,7 @@
     "            \n",
     "            # Concatenate the chunks and print the result if any chunks were found\n",
     "            if found:\n",
-    "                chunk +=  (s[ind:ind + res_length]) + \", \"\n",
+    "                chunk +=  (s[ind:ind + res_length]) + \"| \"\n",
     "            if (not found) and all_occurs:\n",
     "                break       \n",
     "            \n",
