HW EDA_handling_the gaps

--- a/ML_Binary_Classification_wo_sklearn_HW.ipynb
+++ b/ML_Binary_Classification_wo_sklearn_HW.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        " array(['setosa', 'versicolor', 'virginica'], dtype='<U10'))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(150,)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris.target.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +128,7 @@
        "((100, 4), (100, 1))"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +136,7 @@
    "source": [
     "X= iris.data[mask]\n",
     "# reshape to assign dimensions\n",
-    "y= iris.target[mask].reshape(-1,1)\n",
+    "y= iris.target[mask].reshape(-1,1) # (100,) -> (100,1)\n",
     "X.shape, y.shape"
    ]
   },
@@ -130,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1754,7 +1774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1768,7 +1788,7 @@
     "        self.rows = X.shape[0]\n",
     "\n",
     "        # add eye column to simplify matrix operations with initial bias(intercept or B0)\n",
-    "        XX = np.hstack((np.ones((self.rows, 1)), X))\n",
+    "        XX = np.hstack((np.ones((self.rows, 1)), X)) \n",
     "\n",
     "        # calculate coeffs as defined earlier\n",
     "        self.coeffs = np.linalg.inv(XX.T @ XX) @ XX.T @ y\n",
@@ -1777,7 +1797,7 @@
     "        \n",
     "    def predict(self, X):\n",
     "\n",
-    "        XX = np.hstack((np.ones((self.rows, 1)), X))\n",
+    "        XX = np.hstack((np.ones((self.rows, 1)), X)) \n",
     "\n",
     "        y_pred = XX @ self.coeffs\n",
     "\n",
@@ -1798,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1817,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1885,7 +1905,7 @@
        "petal width (cm)   0.682845"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1900,12 +1920,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Defining a metric. Calculating the proportion ot correct answers among all outputs."
+    "Defining a metric. Calculating the proportion of correct answers among all outputs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1984,7 @@
        "83        1.0   2    Err"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1987,7 +2007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2022,7 +2042,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2041,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -3243,7 +3263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3268,7 +3288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3282,7 +3302,7 @@
     "        if self.W is None:\n",
     "\n",
     "            np.random.seed(42)\n",
-    "            self.W = np.random.randn(features + 1)\n",
+    "            self.W = np.random.randn(features + 1) # +1 for bias\n",
     "            # self.w = np.zeros(5)\n",
     "            print(self.W) \n",
     "            \n",
@@ -3343,7 +3363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -4875,7 +4895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -6394,12 +6414,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "RMSProp is not so sensetive to LR, starts to converge a little bit earlier and achieved lower loss values."
+    "RMSProp is not so sensetive to LR, starts to converge a little bit earlier and achieves lower loss values."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -6451,7 +6471,7 @@
        "83      False   1    Err"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6465,7 +6485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
