--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,44 +17,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['px.', 'asc'] in *.ipynb files\n",
+      "Looking for: ['PolynomialFeatures'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_A_B_testing_HW.ipynb\n",
-      "               : px.histogram(data_cr| AsC7kGiwGHrrbd2p556q| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_linreg_confidence_interval.ipynb\n",
-      "               : px.line(gross_by_gen| ascending=False).hea| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_LogRegression_SVC_HW.ipynb\n",
-      "               : px.histogram(df_raw,| ASCdcAItJdFsYW+GvUX/| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidential_intervals_HW.ipynb\n",
-      "               : px.histogram(df['%']| Asc1sCyr59+8L2XS6Xcn| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Data_Visualization_HW.ipynb\n",
-      "               : px.line(df_RU, x='tr| ascending = False)\"]| \n",
+      "               : PolynomialFeatures, | \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Feature_engineering_HW.ipynb\n",
+      "               : PolynomialFeatures' | \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Metrics_Regularization_HW.ipynb\n",
-      "               : px.box(df[num_featur| aSCQSPPzwwzh79izWrFm| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/COVID-19_visualization.ipynb\n",
-      "               : px.choropleth(df, lo| ascar\",\n",
-      "            | \n",
+      "               : PolynomialFeatures\\n| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_linear_polynomial_regression.ipynb\n",
-      "               : px.scatter(X_viz, x=| ascOAIBVCvMGql/PZBXm| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidence_Intervals.ipynb\n",
-      "               : px.line(df_pop, x='P| asCTMzM/j7+/PL7ezsdG| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_CS_videogames_HW.ipynb\n",
-      "               : px.box(df, x='Genre'| ascending= False).st| \n",
+      "               : PolynomialFeatures\"\n",
+      "| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Titanic.ipynb\n",
-      "               : px.histogram(df_viz,| ascending= False).st| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_7.ipynb\n",
-      "               : px.bar(x= df.columns| ascending'},)\\n\",\n",
-      "  | \n"
+      "               : PolynomialFeatures\\n| \n"
      ]
     }
    ],
@@ -111,6 +96,15 @@
     "        if found:\n",
     "            # print(dir_path + '/' + filepath.ljust(50),\" \"*3 + \":\", chunk)\n",
     "            print(dir_path + '/' + filepath +\"\\n\" + \" \"*15 + \":\", chunk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "check_na(df)"
    ]
   },
   {
