--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,29 +17,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['PolynomialFeatures'] in *.ipynb files\n",
+      "Looking for: ['medinc'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_LogRegression_SVC_HW.ipynb\n",
-      "               : PolynomialFeatures, | \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Feature_engineering_HW.ipynb\n",
-      "               : PolynomialFeatures' | \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Metrics_Regularization_HW.ipynb\n",
-      "               : PolynomialFeatures\\n| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_linear_polynomial_regression.ipynb\n",
-      "               : PolynomialFeatures\"\n",
-      "| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Titanic.ipynb\n",
-      "               : PolynomialFeatures\\n| \n"
+      "               : MedInc        median| \n"
      ]
     }
    ],
