--- a/Housing_in_Germany_p1.ipynb
+++ b/Housing_in_Germany_p1.ipynb
@@ -52,7 +52,7 @@
     "#pip install selenium\n",
     "from selenium import webdriver\n",
     "from bs4 import BeautifulSoup\n",
-    "import time\n",
+    "# import time\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
