--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,20 +17,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['medinc'] in *.ipynb files\n",
+      "Looking for: ['confusion', 'matrix'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Feature_engineering_HW.ipynb\n",
-      "               : MedInc        median| \n"
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_ensembles_HW.ipynb\n",
+      "               : confusion_matrix, ac| matrix, accuracy_sco| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_Darwinbooks_recommend.ipynb\n",
+      "               : confusion',\\n\",\" 937| MatrixSimilarity(tfi| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Metrics_Regularization_HW.ipynb\n",
+      "               : confusion_matrix, Co| matrix, ConfusionMat| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_CS_videogames_HW.ipynb\n",
+      "               : confusion_matrix;\\n\"| matrix = tfidf.fit_t| \n"
      ]
     }
    ],
