Feature selection HW

--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,26 +17,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['confusion', 'matrix'] in *.ipynb files\n",
+      "Looking for: ['np.c_'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_ensembles_HW.ipynb\n",
-      "               : confusion_matrix, ac| matrix, accuracy_sco| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_Darwinbooks_recommend.ipynb\n",
-      "               : confusion',\\n\",\" 937| MatrixSimilarity(tfi| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Metrics_Regularization_HW.ipynb\n",
-      "               : confusion_matrix, Co| matrix, ConfusionMat| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_CS_videogames_HW.ipynb\n",
-      "               : confusion_matrix;\\n\"| matrix = tfidf.fit_t| \n"
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_abnormal_data_feature_generating.ipynb\n",
+      "               : np.c_[xx1.ravel(), y| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees_lection.ipynb\n",
+      "               : np.c_[xx.ravel(), yy| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_linreg_regularization.ipynb\n",
+      "               : np.c_[xx.ravel(), yy| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_log_regression_SVM.ipynb\n",
+      "               : np.c_ is a function | \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees.ipynb\n",
+      "               : np.c_[xx.ravel(), yy| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Feature_selection_HW.ipynb\n",
+      "               : np.c_(X,y)).corr()\"\n",
+      "| \n"
      ]
     }
    ],
