HW Naive bayes spam recognition

--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,31 +17,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['np.c_'] in *.ipynb files\n",
+      "Looking for: ['classification_report'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_abnormal_data_feature_generating.ipynb\n",
-      "               : np.c_[xx1.ravel(), y| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees_lection.ipynb\n",
-      "               : np.c_[xx.ravel(), yy| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_linreg_regularization.ipynb\n",
-      "               : np.c_[xx.ravel(), yy| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_log_regression_SVM.ipynb\n",
-      "               : np.c_ is a function | \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees.ipynb\n",
-      "               : np.c_[xx.ravel(), yy| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Feature_selection_HW.ipynb\n",
-      "               : np.c_(X,y)).corr()\"\n",
-      "| \n"
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/NLP_NaiveBayes_text.ipynb\n",
+      "               : classification_repor| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_ensembles_HW.ipynb\n",
+      "               : classification_repor| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_LABa.ipynb\n",
+      "               : classification_repor| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Outliers_features_generation_HW.ipynb\n",
+      "               : classification_repor| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
+      "               : classification_repor| \n"
      ]
     }
    ],
@@ -162,6 +159,23 @@
     "\n",
     "# rename all files in current folder\n",
     "rename_files_in_dir( os.getcwd() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip freeze > requirements.txt"
    ]
   }
  ],
