--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,28 +17,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['classification_report'] in *.ipynb files\n",
+      "Looking for: ['OneHotEncoder'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/NLP_NaiveBayes_text.ipynb\n",
-      "               : classification_repor| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_ensembles_HW.ipynb\n",
-      "               : classification_repor| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_LABa.ipynb\n",
-      "               : classification_repor| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Outliers_features_generation_HW.ipynb\n",
-      "               : classification_repor| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_linreg_confidence_interval.ipynb\n",
+      "               : OneHotEncoder**](htt| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Metrics_Regularization_HW.ipynb\n",
+      "               : OneHotEncoder, Polyn| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/PySpark_Лекция_7.ipynb\n",
+      "               : OneHotEncoderExample| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
-      "               : classification_repor| \n"
+      "               : OneHotEncoderExample| \n"
      ]
     }
    ],
