Housing changed for colab

--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,26 +17,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['OneHotEncoder'] in *.ipynb files\n",
+      "Looking for: ['try:'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_linreg_confidence_interval.ipynb\n",
-      "               : OneHotEncoder**](htt| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Metrics_Regularization_HW.ipynb\n",
-      "               : OneHotEncoder, Polyn| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/PySpark_Лекция_7.ipynb\n",
-      "               : OneHotEncoderExample| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
-      "               : OneHotEncoderExample| \n"
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ERRORS_DATES_.ipynb\n",
+      "               : try:\\n\",\"        dat| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_lecture_04.ipynb\n",
+      "               : try:\\n\",\"  data['a':| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_ensemble_lection.ipynb\n",
+      "               : try:\\n\",\n",
+      "        \"  | \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_Scrapping_Parsing_HW.ipynb\n",
+      "               : try:\\n\",\"    from bs| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ERRORS_DATES_HW.ipynb\n",
+      "               : try:\\n\",\"        dat| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Housing_in_Germany_original_parser.ipynb\n",
+      "               : try:\\n\",\n",
+      "    \"      | \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_7_ERRORS_DATETIME.ipynb\n",
+      "               : try:\\n\",\"    # ваш к| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Housing_in_Germany_p1.ipynb\n",
+      "               : try:\\n\",\n",
+      "    \"      | \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_ESSENTIALS.ipynb\n",
+      "               : try:\\n\",\"  data['a':| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidence_Intervals.ipynb\n",
+      "               : try:\\n\",\n",
+      "    \"    im| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Outliers_features_generation_HW.ipynb\n",
+      "               : try:\\n\",\n",
+      "    \"  from| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ.ipynb\n",
+      "               : try:\\n\",\n",
+      "    \"    fr| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees_HW.ipynb\n",
+      "               : try:\\n\",\n",
+      "    \"  impo| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Housing_in_Germany.ipynb\n",
+      "               : try:\\n\",\n",
+      "    \"      | \n"
      ]
     }
    ],
