--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,54 +17,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['try:'] in *.ipynb files\n",
+      "Looking for: ['go.figure'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ERRORS_DATES_.ipynb\n",
-      "               : try:\\n\",\"        dat| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_lecture_04.ipynb\n",
-      "               : try:\\n\",\"  data['a':| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_ensemble_lection.ipynb\n",
-      "               : try:\\n\",\n",
-      "        \"  | \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_Scrapping_Parsing_HW.ipynb\n",
-      "               : try:\\n\",\"    from bs| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ERRORS_DATES_HW.ipynb\n",
-      "               : try:\\n\",\"        dat| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Housing_in_Germany_original_parser.ipynb\n",
-      "               : try:\\n\",\n",
-      "    \"      | \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Python_7_ERRORS_DATETIME.ipynb\n",
-      "               : try:\\n\",\"    # ваш к| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Housing_in_Germany_p1.ipynb\n",
-      "               : try:\\n\",\n",
-      "    \"      | \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_ESSENTIALS.ipynb\n",
-      "               : try:\\n\",\"  data['a':| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidence_Intervals.ipynb\n",
-      "               : try:\\n\",\n",
-      "    \"    im| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Outliers_features_generation_HW.ipynb\n",
-      "               : try:\\n\",\n",
-      "    \"  from| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_ensembles_HW.ipynb\n",
+      "               : go.Figure(data=[go.T| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_Metrics_Regularization_HW.ipynb\n",
+      "               : go.Figure()\\n\",\n",
+      "    | \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/COVID-19_visualization.ipynb\n",
+      "               : go.Figure()\\n\",\n",
+      "    | \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_LossFunc_LinRegrOptimization_HW.ipynb\n",
+      "               : go.Figure(myline)\\n\"| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_CS_videogames_HW.ipynb\n",
+      "               : go.Figure()\\n\",\n",
+      "    | \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_7.ipynb\n",
+      "               : go.Figure(mybar,\\n\",| \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ.ipynb\n",
-      "               : try:\\n\",\n",
-      "    \"    fr| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_decision_trees_HW.ipynb\n",
-      "               : try:\\n\",\n",
-      "    \"  impo| \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Housing_in_Germany.ipynb\n",
-      "               : try:\\n\",\n",
-      "    \"      | \n"
+      "               : go.Figure(data=[\\n\",| \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/NLP_NaiveBayes_LR_spam_recogn.ipynb\n",
+      "               : go.Figure()\\n\",\"fig.| \n"
      ]
     }
    ],
